--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,42 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.piggymetrics</groupId>
-	<artifactId>piggymetrics</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>piggymetrics</name>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.2.RELEASE</version>
+        <relativePath/>
+        <!-- lookup parent from repository -->
+    </parent>
 
-	<modules>
-		<module>config</module>
-		<module>monitoring</module>
-		<module>registry</module>
-		<module>gateway</module>
-		<module>auth-service</module>
-		<module>account-service</module>
-		<module>statistics-service</module>
-		<module>notification-service</module>
-	</modules>
+    <groupId>com.piggymetrics</groupId>
+    <artifactId>piggymetrics</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>piggymetrics</name>
+
+    <modules>
+        <module>config</module>
+        <module>monitoring</module>
+        <module>registry</module>
+        <module>gateway</module>
+        <module>auth-service</module>
+        <module>account-service</module>
+        <module>statistics-service</module>
+        <module>notification-service</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
+                <version>Dalston.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
