--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Webull Limited
 
 ADD ./target/account-service.jar /app/
 CMD ["java", "-Xmx200m", "-jar", "/app/account-service.jar"]
