--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Webull Limited
 
 ADD ./target/monitoring.jar /app/
 CMD ["java", "-Xmx200m", "-jar", "/app/monitoring.jar"]
